--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
           </li>
     <li class="nav-item">
-            <a class="nav-link" href="product.html"><strong> Product </strong></a>
+            <a class="nav-link" href="map.html"><strong> Map </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
@@ -50,23 +50,23 @@
 </ul> 
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img alt= "weatherBackground" src="img/toronto3.jpg">
+    <img alt= "weatherBackground" src="img/sc5.png">
     <div class="carousel-caption">
-      <h1 class="display-2"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
+      <h1 class="display-2x"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
   <div class="carousel-item">
-    <img alt= "pressureBackground" src="img/toronto3.jpg">
+    <img alt= "pressureBackground" src="img/sc4.png">
     <div class="carousel-caption">
-      <h1 class="display-2"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
+      <h1 class="display-2x"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
   <div class="carousel-item">
-    <img alt= "cloudBackground" src="img/toronto3.jpg">
+    <img alt= "cloudBackground" src="img/sc3.png">
     <div class="carousel-caption">
-      <h1 class="display-2"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
+      <h1 class="display-2x"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
@@ -76,15 +76,39 @@
 <div class="container-fluid padding">
 <div class="row welcome text-center">
   <div class="col-12">
-    <h1 class="display-4"> Description of Our Project</h1>
+    <h1 class="display-4">Abstract</h1>
   </div>
   <hr class="light">
   <div class="col-12">
-    <h2 class="lead">Developing a web-based application that delivers an estimation of the true weather in Ontario every 
-      hour at the user's exact location (or chosen location) using only open-source technologies and solutions  </h2>
+    <h2 class="lead">Current popular weather services in Ontario provide the user with weather information 
+	corresponding to the closest weather station. Unfortunately, as is often the case, the nearest weather 
+	station to a given location can be many kilometers away. When this is the case, the user’s weather 
+	information can be vastly different from reality. To fix this problem, Owen Andrews-Simons of Arubrum 
+	Innovations has asked our group to develop a product that can estimate the actual weather at the user’s 
+	exact location (or chosen location). Additionally, we were tasked to provide a new report every hour 
+	using only open-source technologies and solutions (no-paid licenses). To accomplish this, our team has 
+	developed an interpolation model in QGIS, a robust extract transfer and load (ETL) pre-process workflow 
+	using python, and a web map weather report that utilizes Leaflet. Our methodologies used were (1) data 
+	acquisition and pre-processing, (2) database design, (3) spatial and statistical analysis, (4) 
+	programming/customization, and (5) visualization. Our project has met our client’s expectations of 
+	delivering an automated location-specific weather web report of Ontario while using open-source technology.   </h2>
+  </div>
+  
+</div>
+</div>
+
+<div class="container-fluid padding">
+<div class="row welcome text-center">
+  <div class="col-12">
+  </div>
+  <hr class="light">
+  <div class="col-12">
+    <img  alt= "flowdiagram" class="flowdiagram" src= "img/flowdiagram.png">
   </div>
 </div>
 </div>
+
+
 
 <!--- Meet the team -->
 <div class="container-fluid padding">
@@ -107,31 +131,30 @@
         <h3 class="card-title text-center"> Aaron Jutzi</h3>
         <h3 class="card-text text-center"> GIS & Web Developer </h3>
         <p class="card-text text-center">Aaron is currently studying GIS (Applications Specialist) at Fleming College, 
-          and previously studied Geomatics at Carleton University. In his spare time Aaron enjoys exercising,
-        reading books and meditating.</p>
+          and previously studied Geomatics at Carleton University. He is responsible for the Python ETL Workflow and Web Development.</p>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="card">
-      <img class="card-img-top" src= "img/hyerinm.jpg" alt= "hyerin">
+      <img class="card-img-top" src= "img/hyerin.jpg" alt= "hyerin">
       <div class="card-body">
         <h3 class="card-title text-center"> Hyerin Mun </h3>
         <h3 class="card-text text-center"> Web & App Designer </h3>
         <p class="card-text text-center"> Hyerin Mun is currently a GIS-Application Specialist at Fleming College. 
           She recently graudated from University of Saskatchewan with a BSc. in Geology. 
-          Her duties are spatial analysis and web development.</p>
+          She is responsible for Spatial Analysis and Web Development.</p>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="card">
-      <img class="card-img-top" src= "img/team4.png" alt= "toby">
+      <img class="card-img-top" src= "img/team1.png" alt= "toby">
       <div class="card-body">
         <h3 class="card-text text-center"> Toby Agomuo</h3>
         <h3 class="card-text text-center"> GIS & Web Developer </h3>
         <p class="card-text text-center">Toby currently is a student of the GIS-Application Specialist program at Fleming college
-	 and previously studied geoinformatics at the University of Lagos. Toby is an avid traveler and a lover of history.
+	 and previously studied geoinformatics at the University of Lagos.
 	 </p>
       </div>
     </div>
@@ -207,4 +230,3 @@
 
 </body>
 </html>
-© 2021 GitHub, Inc.
