--- a/contact.html
+++ b/contact.html
@@ -12,84 +12,12 @@
   <link href="style.css" rel="stylesheet">
 
 </head>
-<style>
-  body{
-    background-image: url("img/toronto1.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        
-  }
-  * {
-    box-sizing: border-box;
-  }
-  
-  input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-  }
-  
-  label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-  }
-  
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  
-  .col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
-  }
-  
-  .col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-      width: 100%;
-      margin-top: 0;
-    }
-  }
-  </style>
+
 <body>
-
-
 <!-- Nav bars -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
   <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario</strong> Weather</a>
+      <a class="navbar-brand" href="home.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario</strong> Weather</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarResponsive">
           <span class="navbar-toggler-icon"></span>
@@ -97,16 +25,17 @@
   </div>
       <div class="navbar-collapse collapse"  id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-     <a class="nav-link" href="index.html"><strong> Home </strong></a>
+          <li class="nav-item">
+      <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
           </li>
     <li class="nav-item">
-            <a class="nav-link" href="product.html"><strong> Product </strong></a>
+            <a class="nav-link" href="map.html"><strong> Map </strong></a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="contact.html"><strong> Contact </strong></a>
           </li>
         </ul>
       </div>
@@ -114,86 +43,83 @@
 
 
 
+<div id="contactform">
+ <div id="contactform">
+    <div id="c_title" class="container-fluid padding">
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h3 class="display-4"> Contact Form</h3>
+      </div>
+      <div class="col-12">
+        <h2 class="lead">If you have any questions on our project, please send us a message by filling in the below form. <br> We will try our best to answer all your inquries!</h2>
+      </div>
+    </div>
+  </div> 
   
-  <div style='color:rgb(0, 255, 64);'>
-  <h2 style='text-align: center;'>Contact Form</h2>
-  <p style='text-align: center;'>If you have any questions on our project, please send us a message by filling in the below form.</br> 
-    We will try our best to answer all your inquries!</p>
-  </div>
-  <div class="container">
-    <form action="validate.php" method="POST" id="my-form">
-      <div class="row">
-        <div class="col-25">
-          <label for="fname">First Name</label>
-        </div>
-        <div class="col-75">
-          <input type="text" id="fname" name="firstName" placeholder="Your name..">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-25">
-          <label for="lname">Last Name</label>
-        </div>
-        <div class="col-75">
-          <input type="text" id="lname" name="lastName" placeholder="Your last name..">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-25">
-          <label for="lname">Email</label>
-        </div>
-        <div class="col-75">
-          <input type="text" id="fname" name="firstName" placeholder="Your Email..">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-25">
-          <label for="lname">Phone Number</label>
-        </div>
-        <div class="col-75">
-          <input type="text" id="lname" name="phoneNumber" placeholder="Your Phone Number..">
-        </div>
-      </div>
-     
-      <div class="row">
-        <div class="col-25">
-          <label for="subject">Message</label>
-        </div>
-        <div class="col-75">
-          <textarea id="subject" name="message" placeholder="Write something.." style="height:200px"></textarea>
-        </div>
-      </div>
-      <div class="row">
-        <input type="submit" value="Submit">
-      </div>
-    </form>
-  </div>
-  
-  </body>
-  </html>
-  
+  <section style="overflow: auto">
+    <div   class="containerx">
+      <!-- Submit to formspree API-->
+      <form action="https://formspree.io/f/moqyqgqd" method="POST" id="my-form">
 
+        <div class="form-group">
+          <label for="firstName"> First Name </label>
+          <input type="text" id="firstName" name="firstName">
+        </div>
+        <div class="form-group">
+          <label for="lastName"> Last Name </label>
+          <input type="text" id="lastName" name="lastName">
+        </div>
+        <div class="form-group">
+          <label for="email"> Email </label>
+          <input type="email" id="email" name="email">
+        </div>
+        <div class="form-group">
+          <label for="phoneNumber"> Phone Number</label>
+          <input type="tel" id="phoneNumber" name="phoneNumber">
+        </div>
+
+        <div class="form-group">
+          <label for="message"> Message </label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </div>
+
+        <button type="submit"> Submit </button> 
+
+      </form>
+    </div>
+
+    <div id="status">  </div>
+
+  </section>
+
+ </div>
+ </div>
+  <script src="main.js"></script>
+  
 <!--- Footer -->
 <footer>
-  <div class="footer fixed-bottom"></div>
-  <div class="container-fluid padding">
-  <div class="row text-center">
-    <div class="col-md-4">
-      <img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50">
-    </div>
-    <div class="col-md-4">
-      <img alt ='logo' src="img/arubrum.png" width="110" height="50">
-    </div>
-    <div class="col-md-4">
-      <img src="img/fleminglogo.png" alt= "fleming">
-    </div>
-    <div class="col-12">
-      <hr class="light">
-      <h5>&copy; Fahrenheit 2021</h5>
-    </div>
+<div class="footer fixed-bottom"></div>
+<div class="container-fluid padding">
+<div class="row text-center">
+  <div class="col-md-4">
+    <img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50">
   </div>
+  <div class="col-md-4">
+    <img alt ='logo' src="img/arubrum.png" width="110" height="50">
   </div>
-  </footer>
+  <div class="col-md-4">
+    <img src="img/fleminglogo.png" alt= "fleming">
+  </div>
+  <div class="col-12">
+    <hr class="light">
+    <h5>&copy; Fahrenheit 2021</h5>
+  </div>
+</div>
+</div>
+</footer>
+
+</body>
+</html>
 
 </body>
 </html>
